<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="mainPageFragmentTitle" type="com.example.foodorderapp.ui.fragments.MainPageFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_bar_background">

                    <TextView
                        android:id="@+id/textViewToolBarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/brand_name"
                        android:textAppearance="@style/MainTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="0dp"
                        android:theme="@style/SearchViewMy"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        app:queryBackground="@android:color/transparent"
                        android:background="@drawable/edit_text_background"
                        app:searchIcon="@drawable/ic_search"
                        app:queryHint="@string/editTextString"
                        android:minHeight="48dp"
                        app:iconifiedByDefault="false"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:paddingHorizontal="8dp"
                        android:textColorHint="@color/editTextTextColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewToolBarTitle" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonCart"
                        android:layout_width="56dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/button_background"
                        android:drawableLeft="@drawable/ic_cart"
                        android:drawablePadding="5dp"
                        android:textColor="@color/editTextBackgroundColor"
                        android:textSize="14sp"
                        app:backgroundTint="@null"
                        android:onClick="@{() -> mainPageFragmentTitle.cartOnClick(buttonCart)}"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewToolBarTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textViewToolBarTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/mainBackgroundColor"
                app:layout_constraintTop_toBottomOf="@+id/cardViewTop">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttons_background"
                    android:elevation="6dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonRepeatLastOrder"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_repeat"
                        android:paddingVertical="8dp"
                        android:paddingStart="24dp"
                        android:onClick="@{() -> mainPageFragmentTitle.repeatLastOnClick(buttonRepeatLastOrder)}"
                        android:paddingTop="8dp"
                        android:text="@string/repeat"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/ContentText"
                        android:textColor="@color/contentTextColor"
                        app:iconPadding="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlCompat,RtlSymmetry" />

                    <View
                        android:id="@+id/strokeBetweenButtons"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="@color/strokeColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/buttonRepeatLastOrder" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonSurpriseMe"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_question_mark"
                        android:paddingVertical="8dp"
                        android:paddingStart="24dp"
                        android:paddingTop="8dp"
                        android:text="@string/surprise_me"
                        android:onClick="@{() -> mainPageFragmentTitle.surpriseMeOnClick(buttonSurpriseMe)}"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/ContentText"
                        android:textColor="@color/contentTextColor"
                        app:iconPadding="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/strokeBetweenButtons"
                        tools:ignore="RtlCompat,RtlSymmetry" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>